# quill

./: CMakeLists.txt
examples/shared_library/: CMakeLists.txt  example_shared.cpp
examples/shared_library/launcher/: CMakeLists.txt
examples/shared_library/launcher/include/launcher/: launcher.cpp  launcher.h
examples/shared_library/quill_wrapper_shared/include/quill_wrapper_shared/: quill_wrapper_shared.cpp  quill_wrapper_shared.h
examples/shared_library/test_module/: CMakeLists.txt
examples/shared_library/test_module/include/test_module/: test_module.cpp  test_module.h
